--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ install_requires =
     requests
     tqdm
     pre-commit
-    instructor
+    streamlit
     python-dotenv
     jinja2
 python_requires = >=3.10
